v1.0: Private Diary [https://github.com/Wafflespeanut/Python/tree/64a9c8dd2470ec309a439a41568778187bbe8bb7/Private%20Diary]
- Creates timestamped folders and text files for stories
- Writes the stories for every [RETURN] stroke, which indicates a paragraph
- Functions: new(), diary()

v2.0: Memento [https://github.com/Wafflespeanut/Python/blob/7f2572857bbe86b2598d27ab7872017a580351ff/Memento]
- Added a simple encryption method which hexes and shifts the ASCII values (to make it really "private" - further protection is of your own)
- Now, you can view stories for a given day
- A TEMP file is created for viewing/updating any story, leaving the original files undisturbed
- Functions: hexed(), char(), zombify(), shift(), protect(), write()

v2.1: Souvenir
- View random stories
- TEMP is deleted after a timeout (to keep things safe)
- One-time password for updating stories
- Functions: random(), temp(), protect()